# RAG-opensearch-search

./: .gitignore  ARCHITECTURE.md  Dockerfile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/: ask.py  debug.py  documents.py  feedback.py  health.py  router.py  search.py
app/evaluation/: groundedness.py  metrics.py  repository.py
app/guardrails/: base.py  input.py  output.py  retrieval.py
app/indexing/: chunker.py  opensearch_indexer.py  pii_detector.py  pipeline.py
app/indexing/embedder/: __init__.py  base.py  openai.py
app/indexing/loaders/: __init__.py  base.py  csv_loader.py  markdown.py  pdf.py
app/models/: document.py  feedback.py  rag.py  search.py
app/rag/: compressor.py  graph.py  prompts.py  state.py
app/rag/nodes/: answer_generator.py  answer_validator.py  context_budgeter.py  permission_filter.py  query_classifier.py  reranker.py
app/search/: base.py  filters.py  hybrid.py  index_manager.py  keyword.py  vector.py
docs_sample/: account_limits.csv  compliance_notes.md  mobile_auth_policy.md  product_faq.md  transfer_procedures.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AskPanel.tsx  SearchPanel.tsx
scripts/: evaluate_retrieval.py  generate_demo_docs.py  index_documents.py
tests/: conftest.py
tests/integration/: test_rag.py  test_search.py
tests/unit/: test_chunker.py  test_filters.py  test_guardrails.py  test_metrics.py
