[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secure-hybrid-rag-opensearch"
version = "0.1.0"
description = "Secure Hybrid RAG Search for Fintech Knowledge Bases"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # OpenSearch
    "opensearch-py[async]>=2.7.0",

    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",

    # LLM & Embedding providers
    "anthropic>=0.40.0",
    "openai>=1.55.0",

    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Tokenization
    "tiktoken>=0.8.0",

    # Retry logic (rate limits, network errors)
    "tenacity>=9.0.0",

    # Document parsing
    "pypdf>=5.1.0",
    "pyyaml>=6.0",   # parsowanie YAML front matter w plikach Markdown

    # Embeddings (local fallback)
    "sentence-transformers>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",   # async test client for FastAPI
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
    "debugpy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function calls in default args (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
explicit_package_bases = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires running OpenSearch and/or Anthropic API key",
]
